--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Create User</title>
+    <title>User Page</title>
 </head>
 <body>
-<h1> User Page</h1>
-
+<h1>User Page</h1>
+<h2>Current users:</h2>
+<table>
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th>Registered</th>
+        <th>Status</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${users}">
+        <td th:text="${user.id}">User ID</td>
+        <td th:text="${user.username}">Username</td>
+        <td th:text="${user.email}">User Email</td>
+        <td th:text="${#temporals.format(user.createdAt, 'yyyy-MM-dd')}">Creation Date</td>
+        <td th:text="${user.enabled ? 'Active' : 'Inactive'}">Status</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
