add image upload functionality with image hosting db

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -36,5 +36,16 @@
     <button type="submit">Search</button>
     <span th:text="${error}"></span>
 </form>
+
+<br>
+
+<form method="POST" th:action="@{/api/images/upload}" enctype="multipart/form-data">
+    Select image to upload:
+    <input type="file" name="image" id="image">
+    <button type="submit">Upload Image</button>
+</form>
+<div th:if="${imageMessage}" th:text="${imageMessage}"></div>
+<div th:if="${imageError}" th:text="${imageError}"></div>
+
 </body>
 </html>
