--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,14 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Login</title>
+    <link rel="stylesheet" href="css/login.css"> <!-- Assuming your CSS file is stored like this -->
 </head>
 <body>
-<h1>Login</h1>
-<form th:action="@{/login}" method="post">
-    <div><label>Username: <input type="text" name="username"/></label></div>
-    <div><label>Password: <input type="password" name="password"/></label></div>
-    <div><input type="submit" value="Log in"/></div>
-    <p th:if="${loginError}" th:text="'Invalid username or password.'"></p>
-</form>
+<div class="login-container">
+    <h1>Login</h1>
+    <form th:action="@{/login}" method="post" class="login-form">
+        <div class="input-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username"/>
+        </div>
+        <div class="input-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password"/>
+        </div>
+        <div class="input-group">
+            <input type="submit" value="Log in"/>
+        </div>
+        <p class="error" th:if="${loginError}" th:text="'Invalid username or password.'"></p>
+    </form>
+</div>
 </body>
 </html>
